update index.html to use new bundle#

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
     <div id="chat-container"></div>
-    <script src="dist/chat-bundle.js"></script>
+    <script src="frontend/dist/chat-bundle.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', async function initializeChat() {
             console.log('🔄 Initializing chat system...');
