--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <style>
         /* ✅ Chat Container Styling */
-        #chat-container {
+        #rag-chat-root {
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
@@ -59,7 +59,7 @@
                     throw new Error('❌ React, ReactDOM, or RAGChat component not loaded.');
                 }
 
-                const container = document.getElementById('chat-container');
+                const container = document.getElementById('rag-chat-root');
                 if (!container) {
                     throw new Error('❌ Chat container not found.');
                 }
@@ -68,7 +68,7 @@
                 const config = await getConfig();
                 console.log('✅ Config loaded:', config);
 
-                const root = window.ReactDOM.createRoot(document.getElementById('rag-chat-root'));
+                const root = window.ReactDOM.createRoot(container);
                 root.render(window.React.createElement(window.RAGChat, { namespace: 'NS1' }));
                 console.log('✅ Chat component mounted with default namespace: NS1');
 
@@ -77,7 +77,7 @@
                 }
             } catch (error) {
                 console.error('🚨 Chat initialization failed:', error);
-                document.getElementById('chat-container').innerHTML = `
+                document.getElementById('rag-chat-root').innerHTML = `
                     <div class="error-message">
                         ⚠️ Failed to initialize chat. Please refresh the page or contact support.
                         <br>
