--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 </head>
 <body>
     <div id="rag-chat-root"></div>
+    <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="/rag-bmore-app/public/chat-bundle.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', async function initializeChat() {
