--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <div id="rag-chat-root"></div>
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <script src="/rag-bmore-app/dist/utils/pinecone.js"></script>
+    <script>window.queryPinecone = window.RAGChat.queryPinecone;</script>
     <script src="/rag-bmore-app/public/chat-bundle.js"></script>
     <script type="module">
         import { queryPinecone } from '/rag-bmore-app/src/utils/pinecone.js';
