--- a/index.html
+++ b/index.html
@@ -51,19 +51,20 @@
     <div id="rag-chat-root"></div>
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-    <script src="/rag-bmore-app/dist/utils/pinecone.js"></script>
-    <script>window.queryPinecone = window.RAGChat.queryPinecone;</script>
     <script src="/rag-bmore-app/public/chat-bundle.js"></script>
-    <script type="module">
-        import { queryPinecone } from '/rag-bmore-app/src/utils/pinecone.js';
-        window.queryPinecone = queryPinecone; // Make it available globally
 
-        document.addEventListener('DOMContentLoaded', async function initializeChat() {
+    <!-- Wait for chat-bundle to load before accessing its exports -->
+    <script>
+        document.addEventListener('DOMContentLoaded', async function() {
+            // Wait for chat-bundle to be loaded and initialized
+            while (!window.RAGChat || !window.RAGChat.queryPinecone) {
+                await new Promise(resolve => setTimeout(resolve, 100));
+            }
+            
             console.log('🔄 Initializing chat system...');
-
             try {
                 if (!window.React || !window.ReactDOM || !window.RAGChat) {
-                    throw new Error('❌ React, ReactDOM, or RAGChat component not loaded.');
+                    throw new Error('❌ Required dependencies not loaded.');
                 }
 
                 const container = document.getElementById('rag-chat-root');
@@ -72,7 +73,7 @@
                 }
 
                 console.log('🔍 Fetching config from Lambda...');
-                const config = await getConfig();
+                const config = await window.RAGChat.getConfig();
                 console.log('✅ Config loaded:', config);
 
                 const root = window.ReactDOM.createRoot(container);
@@ -83,7 +84,7 @@
                     addSaveChatButton(container);
                 }
             } catch (error) {
-                console.error('🚨 Chat initialization failed:', error);
+                console.error('❌ Chat initialization failed:', error);
                 document.getElementById('rag-chat-root').innerHTML = `
                     <div class="error-message">
                         ⚠️ Failed to initialize chat. Please refresh the page or contact support.
@@ -93,28 +94,6 @@
                 `;
             }
         });
-
-        async function getConfig() {
-            try {
-                const response = await fetch('https://lfx6tvyrslqyrpmhphy3bkbrza0clbxv.lambda-url.us-east-2.on.aws/', {
-                    method: 'GET',
-                    headers: {
-                        'Accept': 'application/json',
-                        'Content-Type': 'application/json'
-                    },
-                    mode: 'cors'
-                });
-
-                if (!response.ok) {
-                    throw new Error(`❌ HTTP error! Status: ${response.status}`);
-                }
-
-                return await response.json();
-            } catch (error) {
-                console.error('🚨 Config fetch failed:', error);
-                throw error;
-            }
-        }
 
         function addSaveChatButton(container) {
             console.log('✅ Adding Save Chat button...');
@@ -134,7 +113,7 @@
             try {
                 const userNamespace = window.userData.Email.toLowerCase();
                 console.log('📁 Saving chat to user namespace:', userNamespace);
-                await queryPinecone(userNamespace);
+                await window.RAGChat.queryPinecone(userNamespace);
             } catch (error) {
                 console.error('🚨 Failed to save chat:', error);
                 alert('⚠️ Unable to save chat at this time.');
