--- a/index.html
+++ b/index.html
@@ -3,25 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>B'More Chat</title>
+    <title>Baltimore Maternal Health Chat</title>
+    <script src="chat-bundle.js" defer></script>
 </head>
 <body>
-    <div id="rag-chat-root"></div>
-    <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-    <script src="/rag-bmore-app/public/chat-bundle.js"></script>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const container = document.getElementById('rag-chat-root');
-            if (!container) {
-                console.error('Chat container not found');
-                return;
-            }
-
-            const root = window.ReactDOM.createRoot(container);
-            root.render(window.React.createElement(window.RAGChat));
-        });
-    </script>
+    <div id="root"></div>
 </body>
 </html>
