index.html update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baltimore Maternal Health Chat</title>
+    <title>Baltimore Healthy Babies Q&A</title>
     <script src="/rag-bmore-app/chat-bundle.js" defer></script>
 </head>
 <body>
